@@ -53,6 +53,9 @@ fi
 dnl Checks for libraries.
 AC_LIB_RPATH
 
+dnl
+dnl whether (v)dccm connection file support is required
+dnl
 AC_ARG_ENABLE(dccm-file-support,
               [  --enable-dccm-file-support  enable dccm file support],
               enable_dccm_file_support=$enableval, enable_dccm_file_support=yes)
@@ -68,6 +71,9 @@ fi
 if test "$enable_dccm_file_support" = "yes"; then dccm_file=1; else dccm_file=0; fi
 AC_DEFINE_UNQUOTED(ENABLE_DCCM_FILE_SUPPORT, $dccm_file, [Define to 1 if you want dccm file support.])
 
+dnl
+dnl whether odccm dbus support is required
+dnl
 AC_ARG_ENABLE(odccm-support,
               [  --enable-odccm-support  enable odccm support (requires D-Bus)],
               enable_odccm_support=$enableval, enable_odccm_support=yes)
@@ -96,6 +102,9 @@ fi
 if test "$enable_odccm_support" = "yes"; then odccm=1; else odccm=0; fi
 AC_DEFINE_UNQUOTED(ENABLE_ODCCM_SUPPORT, $odccm, [Define to 1 if you want odccm support.])
 
+dnl
+dnl whether hal dbus support is required
+dnl
 AC_ARG_ENABLE(hal-support,
               [  --enable-hal-support  enable hal support (requires D-Bus)],
               enable_hal_support=$enableval, enable_hal_support=yes)
